examples/test/testpolicy16237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16237
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key43: value42
      key33: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value30
          key2: value36
          key23: value42
      podSelector:
        matchLabels:
          key41: value12
